# Video_Player_VLC_DX9

./: CMakeLists.txt  README.md  Video_Player_VLC.cpp  Video_Player_VLC.h
